--- a/index.html
+++ b/index.html
@@ -70,59 +70,72 @@
       </main>
     </section>
     <section class="season">
-      <div class="top">
-        <div class="left">
-          <h1>СЕЗОН 2020/21</h1>
-          <hr style="height: 1px; background-color: #ffffff" ; width="120px" />
-          <div id="season__slider" class="clocks">
-            <div class="clock">
-              <div>
-                <img src="./images/clock 1.png" alt="clock__icon" />
+        <div class="top">
+          <div class="left">
+            <h1>СЕЗОН 2020/21</h1>
+            <hr
+              style="height: 1px; background-color: #ffffff"
+              ;
+              width="120px"
+            />
+            <div id="season__slider" class="clocks">
+              <div class="clock">
+                <div class="clock__img">
+                  <img src="./images/clock 1.png" alt="clock__icon" />
+                </div>
+                <p>Louis XVI ATHOS</p>
+                <p>165 000 руб.</p>
               </div>
-              <p>Louis XVI ATHOS</p>
-              <p>165 000 руб.</p>
-            </div>
-            <div class="clock">
-              <div>
-                <img src="./images/clock 1.png" alt="clock__icon" />
+              <div class="clock">
+                <div class="clock__img">
+                  <img src="./images/clock 1.png" alt="clock__icon" />
+                </div>
+                <p>Louis XVI ATHOS</p>
+                <p>165 000 руб.</p>
               </div>
-              <p>Louis XVI ATHOS</p>
-              <p>165 000 руб.</p>
-            </div>
-            <div class="clock">
-              <div>
-                <img src="./images/clock 1.png" alt="clock__icon" />
+              <div class="clock">
+                <div class="clock__img">
+                  <img src="./images/clock 1.png" alt="clock__icon" />
+                </div>
+                <p>Louis XVI ATHOS</p>
+                <p>165 000 руб.</p>
               </div>
-              <p>Louis XVI ATHOS</p>
-              <p>165 000 руб.</p>
             </div>
           </div>
+          <div class="right">
+            <h1>Новая коллекция</h1>
+            <hr
+              style="height: 1px; background-color: #ffffff"
+              ;
+              width="120px"
+            />
+            <button>Каталог</button>
+          </div>
         </div>
-        <div class="right">
-          <h1>Новая коллекция</h1>
-          <hr style="height: 1px; background-color: #ffffff" ; width="120px" />
-          <button>Каталог</button>
+        <div class="bottom">
+          <div class="left"></div>
+          <div class="right">
+            <h1>коллекция 2018</h1>
+            <hr
+              style="height: 1px; background-color: #ffffff"
+              ;
+              width="120px"
+            />
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non
+              rutrum ornare ut mattis habitant dui arcu. Sagittis amet nunc ut
+              neque quis nibh arcu. Vivamus vestibulum nisi et venenatis sed
+              scelerisque magna consectetur. Amet convallis quis gravida
+              facilisis vulputate. Faucibus facilisi habitasse ipsum interdum
+              dictum aliquet. Velit quis ullamcorper pulvinar nulla malesuada
+              integer. Aenean praesent viverra nulla nullam natoque volutpat
+              curabitur auctor. Viverra viverra ullamcorper scelerisque risus
+              dignissim egestas. Id aliquam a aliquam egestas leo orci pharetra
+              sed diam.
+            </p>
+            <button>посмотреть коллекцию</button>
+          </div>
         </div>
-      </div>
-      <div class="bottom">
-        <div class="left"></div>
-        <div class="right">
-          <h1>коллекция 2018</h1>
-          <hr style="height: 1px; background-color: #ffffff" ; width="120px" />
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non rutrum
-            ornare ut mattis habitant dui arcu. Sagittis amet nunc ut neque quis
-            nibh arcu. Vivamus vestibulum nisi et venenatis sed scelerisque
-            magna consectetur. Amet convallis quis gravida facilisis vulputate.
-            Faucibus facilisi habitasse ipsum interdum dictum aliquet. Velit
-            quis ullamcorper pulvinar nulla malesuada integer. Aenean praesent
-            viverra nulla nullam natoque volutpat curabitur auctor. Viverra
-            viverra ullamcorper scelerisque risus dignissim egestas. Id aliquam
-            a aliquam egestas leo orci pharetra sed diam.
-          </p>
-          <button>посмотреть коллекцию</button>
-        </div>
-      </div>
     </section>
     <section class="new">
       <div class="container">
