--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               ;
               width="120px"
             />
-            <div id="season__slider" class="clocks">
+            <div id="season__slider">
               <div class="clock">
                 <div class="clock__img">
                   <img src="./images/clock 1.png" alt="clock__icon" />
@@ -141,7 +141,7 @@
       <div class="container">
         <h1>новые поступления</h1>
         <hr style="height: 1px; background-color: #ffffff" ; width="120px" />
-        <div id="new__slider" class="clocks">
+        <div id="new__slider">
           <div class="clock">
             <div>
               <img src="./images/clock 1.png" alt="clock__icon" />
